# resume-generator

./: .env.example  .gitignore  .mcp.json  LICENSE  README.md  langgraph.json  pyproject.toml
ntbk/: testing.ipynb
src/resume_generator/: __init__.py  configuration.py  graph.py  llm_config.yaml  llms.py  logger.py  tools.py  utils.py
src/resume_generator/graphs/: ats_scanner.py  ats_scanner_graph.py  resume_generator.py  resume_generator_graph.py
src/resume_generator/prompts/: ats_scanner.py  ats_scanner_prompts.py  prompts.py  resume_generator_prompts.py
src/resume_generator/states/: ats_scanner.py  ats_scanner_states.py  resume_generator_states.py
tests/integration_tests/: test_graph.py
tests/unit_tests/: test_configuration.py
